@@ -1,3 +1,9 @@
+2001-12-11  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>
+
+	* toplevel/c2hs_config.c: now conforms to ISO C
+
+	* toplevel/Version.hs (versnum): 0.10.3
+
 2001-11-14  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>
 
 	* gen/GenBind.hs (setGet): debugged
